# Astera

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  _arena_allocator_8cpp.html  _arena_allocator_8cpp_source.html  _arena_allocator_8hpp.html  _arena_allocator_8hpp.js  _arena_allocator_8hpp_source.html  _asset_8hpp.html  _asset_8hpp.js  _asset_8hpp_source.html  _asset_manager_8cpp.html  _asset_manager_8cpp_source.html  _asset_manager_8hpp.html  _asset_manager_8hpp.js  _asset_manager_8hpp_source.html  _astera_c_l_i_2main_8cpp.html  _astera_c_l_i_2main_8cpp.js  _astera_c_l_i_2main_8cpp_source.html  _astera_core_8hpp.html  _astera_core_8hpp_source.html  _audio_engine_8cpp.html  _audio_engine_8cpp_source.html  _audio_engine_8hpp.html  _audio_engine_8hpp_source.html  _audio_player_8lua.html  _audio_player_8lua_source.html  _behavior_8hpp.html  _behavior_8hpp_source.html  _behavior_8lua.html  _behavior_8lua_source.html  _binary_writer_8cpp_source.html  _binary_writer_8hpp_source.html  _buffer_8cpp.html  _buffer_8cpp_source.html  _buffer_8hpp.html  _buffer_8hpp_source.html  _camera_8cpp.html  (+704 more)
.github/: CODEOWNERS
.github/workflows/: BuildLinux.yaml  BuildWindows.yaml
CMake/: AsteraConfig.cmake.in  BuildLuaJIT.cmake  CPackConfig.cmake  DetectPlatform.cmake  FetchDeps.cmake  GenerateDocs.cmake  InstallConfig.cmake  NthEngine.pc.in  NthEngineConfig.cmake.in  deb_postinst  rpm_post_install.sh
Captures/: MonDec1-301.xml
Content/Shaders/: Sprite.frag
Demos/: CMakeLists.txt
Demos/SpaceInvaders/: SpaceInvaders.astera
Demos/SpaceInvaders/Config/: InputMap.ini
Demos/SpaceInvaders/Content/: .emmyrc.json
Demos/SpaceInvaders/Runtime/: CMakeLists.txt  main.cpp
Docs/Markdown/: MainPage.md
Docs/html/: _behavior_8hpp_source.html  _clock_8lua.html  _clock_8lua_source.html  _command_queue_8cpp_source.html  _content_8hpp.html  _content_8hpp.js  _content_8hpp_source.html  _coordinates_8lua.html  _coordinates_8lua_source.html  _entity_8lua.html  _entity_8lua_source.html  _game_8cpp.html  _game_8cpp_source.html  _game_8hpp.html  _game_8hpp_source.html  _game_8lua.html  _game_8lua_source.html  _input_8cpp.html  _input_8cpp_source.html  _input_8hpp.html  _input_8hpp_source.html  _input_8lua.html  _input_8lua_source.html  _input_codes_8hpp_source.html  _log_8lua.html  _log_8lua_source.html  _math_8lua.html  _math_8lua_source.html  _scene_8cpp_source.html  _scene_8hpp_source.html  _scene_descriptor_8hpp_source.html  _scene_parser_8cpp_source.html  _scene_parser_8hpp_source.html  _script_engine_8cpp_source.html  _script_engine_8hpp.html  _script_engine_8hpp_source.html  _script_type_registry_8hpp_source.html  _shader_8cpp_source.html  _shader_8hpp_source.html  _shader_manager_8cpp_source.html  (+75 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_5.js  defines_1.js  enumvalues_0.js  enumvalues_5.js  files_1.js  files_3.js  files_4.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_c.js  functions_e.js  namespaces_0.js  searchdata.js  variables_1.js  variables_d.js
EngineContent/Scripts/templates/: Behavior.lua
EngineContent/Scripts/types/: AudioPlayer.lua  Entity.lua  Input.lua  Scene.lua
EngineContent/Shaders/: Sprite.vert
EngineContent/Templates/: Behavior.lua
Sandbox/: Sandbox.astera  Sandbox.nthproj
Sandbox/Content/Scenes/: Sandbox.xml
Sandbox/Content/Scripts/: BallController.lua
Sandbox/Runtime/: CMakeLists.txt  main.cpp
Source/Common/: CommonPCH.cpp  CommonPCH.hpp  IO.hpp  Macros.hpp
Source/Engine/: AssetManager.cpp  AssetManager.hpp  AsteraCore.hpp  AudioEngine.cpp  AudioEngine.hpp  BinaryWriter.cpp  BinaryWriter.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  Content.hpp  Coordinates.hpp  EngineCommon.hpp  EngineConfig.hpp  EntityBuilder.cpp  EntityBuilder.hpp  Game.cpp  Game.hpp  IO.cpp  IO.hpp  Input.cpp  Input.hpp  InputCodeMap.hpp  InputCodes.hpp  Log.cpp  Log.hpp  Macros.hpp  Math.cpp  Math.hpp  NthEngine.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneDescriptor.hpp  SceneParser.cpp  SceneParser.hpp  SceneState.cpp  SceneState.hpp  (+16 more)
Source/Engine/Components/: Behavior.hpp  Camera.cpp  Camera.hpp  Collider2D.cpp  Collider2D.hpp  Rigidbody2D.cpp  Rigidbody2D.hpp  SoundSource.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Transform.cpp  Transform.hpp
Source/Engine/Physics/: CollisionDetection.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
Source/Engine/Rendering/: Buffer.cpp  Buffer.hpp  Command.hpp  CommandHelpers.hpp  CommandQueue.cpp  CommandQueue.hpp  DebugInterface.cpp  DebugInterface.hpp  GLUtils.hpp  Geometry.cpp  Geometry.hpp  ImGuiDebugLayer.cpp  ImGuiDebugLayer.hpp  PhysicsDebugLayer.cpp  PhysicsDebugLayer.hpp  RenderContext.cpp  RenderContext.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
Source/Engine/Shaders/: manifest.json
Source/Engine/Shaders/GLSL/: SpriteInstanced.frag  SpriteInstanced.vert
Source/Engine/Shaders/Include/: Sprite.inc  SpriteInstanced.inc
Source/Sandbox/: CMakeLists.txt  main.cpp
Source/Sandbox/Content/Scripts/: BallController.lua
Source/Shaders/: Sprite.vert
Source/Shared/: MacroExpander.hpp
Source/Tools/: CMakeLists.txt
Source/Tools/AsteraCLI/: CMakeLists.txt  README.md  main.cpp
Source/Tools/GLSLtoC/: CMakeLists.txt  main.cpp
Source/Tools/NthCLI/: CMakeLists.txt  ProjectDescriptor.hpp  ProjectRunner.cpp  ProjectRunner.hpp  main.cpp
Source/Tools/NthPak/: CMakeLists.txt  (+1 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  classes_a.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  defines_0.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  (+67 more)
(+6 files in other folders)
